force-app/main/default/objects/Account/fields/CreditHoldReason__c.field-meta.xml
<CustomField>
    <fullName>CreditHoldReason__c</fullName>
    <label>Credit Hold Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>