force-app/main/default/objects/Account/fields/LifetimeValue__c.field-meta.xml
<CustomField>
    <fullName>LifetimeValue__c</fullName>
    <label>Lifetime Value (EUR)</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>