force-app/main/default/objects/Account/fields/LoyaltyPoints__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyPoints__c</fullName>
    <label>Loyalty Points</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>