force-app/main/default/objects/Account/fields/LoyaltyTier__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyTier__c</fullName>
    <label>Loyalty Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Bronze</fullName><default>true</default><label>Bronze</label></value>
            <value><fullName>Silver</fullName><default>false</default><label>Silver</label></value>
            <value><fullName>Gold</fullName><default>false</default><label>Gold</label></value>
            <value><fullName>Roaster</fullName><default>false</default><label>Roaster</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>