force-app/main/default/objects/Account/fields/OnCreditHold__c.field-meta.xml
<CustomField>
    <fullName>OnCreditHold__c</fullName>
    <label>On Credit Hold</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>