force-app/main/default/objects/Account/validationRules/LoyaltyPoints_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>LoyaltyPoints_Not_Negative</fullName>
    <active>true</active>
    <description>Loyalty points are earned, never owed. A negative balance is always a data error, so it is rejected at the door — in the org, and in the local runtime.</description>
    <errorConditionFormula>LoyaltyPoints__c &lt; 0</errorConditionFormula>
    <errorDisplayField>LoyaltyPoints__c</errorDisplayField>
    <errorMessage>Loyalty points cannot be negative.</errorMessage>
</ValidationRule>